welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:1: error: ')' expected but '(' found.
setDirection(dir:Direction.North(nord))
                                ^Balin:1: error: ';' expected but ')' found.
setDirection(dir:Direction.North(nord))
                                      ^