welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
setDirection(dir:Direction.North(nord))
